# underactuated

./: .bazelignore  .bazeliskrc  .bazelproject  .bazelrc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .tidy.config  .yapfignore  AGENTS.md  BUILD  BUILD.bazel  CMakeLists.txt  Deepnote.json  Deepnote.md  Deepnote.sh  Developers.md  LICENSE.TXT  MANIFEST.in  MODULE.bazel  PANTS.md  README.md  Readme.md  WORKSPACE  WORKSPACE.bazel  acrobot.html  acrobot.ipynb  actor_critic.html  belief.html  bib.html  bionic-requirements.in  bionic-requirements.txt  bionic-shared-requirements.in  chapters.js  chapters.json  chapters.py  colab-requirements.in  (+80 more)
book/: .htaccess  .tidy.config  BUILD  BUILD.bazel  Deepnote.json  Deepnote.sh  Deepnote_docker.sh  Deepnote_docker_sha.txt  Deepnote_workspace.txt  acrobot.html  actor_critic.html  belief.html  bib.html  book  chapters.js  chapters.json  contact.html  dp.html  drake.html  feedback_motion_planning.html  fluids.html  footer.html.in  header.html.in  humanoids.html  imitation.html  index.html  intro.html  limit_cycles.html  limit_cycles.ipynb  lqr.html  lyapunov.html  manipulation.html  misc.html  multibody.html  optimization.html  optimization.ipynb  output_feedback.html  pend.html  planning.html  playbook.html  (+17 more)
book/acrobot/: BUILD.bazel  acrobot.ipynb  cartpole.ipynb  flatness.ipynb  planar_quadrotor.ipynb  quadrotor.ipynb  test_notebooks_acrobot.py
book/contact/: BUILD.bazel  basketball.ipynb  contact.ipynb  hybrid.ipynb  rimless_wheel.ipynb  test_notebooks_contact.py
book/dp/: BUILD.bazel  grid_world.ipynb  mlp.ipynb  on_a_mesh.ipynb  test_notebooks_dp.py
book/figures/: BUILD  BUILD.bazel  Quadrotor2D.ipynb  README.md  autapse_dash.py  autapse_streamlit.py  bounce_pass.graffle  cartpole.xfig  cubic_histogram.swf  cubic_histogram_more_noise.swf  double_integrator_mintime_cost_to_go.py  double_integrator_mintime_policy.m  glider.graffle  graph_search.gv  hybrid_system.tex  lcp_cart.ipynb  logistic_map.py  rimlessWheel.xfig  rrt_basic.swf  rrt_voronoi.swf  simple_double_pend.xfig  simple_pend.xfig  stereographic.py  test_notebooks_figures.py  test_scripts_figures.py  test_stereographic.py  test_vanderpol_staircase.py  transverseCoordinates.m  vanderpol_staircase.py  weight_perturbation_quadratic_b.m
book/humanoids/: BUILD.bazel  littledog.ipynb  spot.ipynb  test_notebooks_humanoids.py  zmp_planner.ipynb
book/intro/: BUILD.bazel  intro.ipynb  (+1 more)
dp/: BUILD.bazel  grid_world.ipynb  mlp.ipynb  on_a_mesh.ipynb  sums_of_squares.ipynb
examples/: BUILD.bazel  Deepnote.json  astar_convex.ipynb  autapse_and_lstm.ipynb  compass_gait.ipynb  contact.ipynb  grid_world.ipynb  jupyter_setup.py  limit_cycles.ipynb  littledog.ipynb  lqr.ipynb  lqr_ct_vs_dt.ipynb  lstm.ipynb  lyapunov.ipynb  miqp_planning.ipynb  multibody.ipynb  optimization.ipynb  perching.ipynb  pl_inequality.py  rimless_wheel.ipynb  simple_legs.ipynb  spring_loaded_inverted_pendulum.ipynb  stochastic.ipynb  trajectory_optimization.ipynb
figures/: BUILD.bazel  Quadrotor2D.ipynb  README.md  acrobot.xfig  autapse.py  autapse_dash.py  autapse_streamlit.py  cart_pole_swingup_lyapunov.py  cartpole.xfig  cascade_system.tex  compassGait.xfig  cubic_bistable_histogram.swf  dirtran_mintime_double_integrator.swf  dirtran_mintime_double_integrator_fine.swf  double_integrator_mintime_cost_to_go.m  double_integrator_mintime_cost_to_go.py  double_integrator_orbits.m  feedback_system.tex  glider.xfig  gridworld_mintime.swf  input_output_system.tex  lcp_cart.ipynb  limitCycleLyapunovCartoon.m  logistic_map.py  mintime_double_int.m  pendubot.xfig  pl_inequality.py  rimlessWheel_w0_-4.8.swf  rimlessWheel_w0_-5.swf  rimlessWheel_w0_0.95.swf  rimlessWheel_w0_10.swf  rimlessWheel_w0_5.swf  ringOscillator.m  stereographic.py  trick_shot.graffle  vanDerPolDircol.swf  vanderpol_particles.swf  vanderpol_staircase.py  weight_perturbation_quadratic_a.m  xcubed.m
intro/: BUILD.bazel
lqr/: BUILD.bazel  ballbot.ipynb  continuous_vs_discrete_time.ipynb  manifold.ipynb  value_iteration.ipynb
lyapunov/: BUILD.bazel  approximate_dp.ipynb  common_lyap_linear.ipynb  cubic_poly.ipynb  global_pend.ipynb  global_polynomial.ipynb  outer_approx.ipynb  star_convex.ipynb  trig_poly.ipynb  van_der_pol.ipynb
pend/: BUILD.bazel  attractivity.ipynb  autapse.ipynb  energy_shaping.ipynb  lstm.ipynb  pend.ipynb
scripts/: BUILD.bazel  colab_scratchpad.ipynb  setup  submodule_checkout  test_ipynb.py
src/: CMakeLists.txt  DoublePendulumPassiveDynamics.ipynb  double_integrator_value_iteration.py  double_pendulum.py  double_pendulum.urdf  double_pendulum_as_single_pendulum.py  double_pendulum_manipulator.py  double_pendulum_simulator.ipynb  double_pendulum_simulator.py  manipulator_dynamics.py  mathematical_program_examples.ipynb  pendulum_constant_torque_demo.py  pendulum_torque_slider_demo.py  pendulum_value_iteration.py  pendulum_visualizer.py  planar_rigid_body_visualizer.py  pyplot_visualizer.py  simple_continuous_time_system.cc  simple_continuous_time_system.h  simple_continuous_time_system.py  simple_continuous_time_system_simulation.py  simple_discrete_time_system.py  simple_discrete_time_system_simulation.py  test_ipynb.py  underactuated_scratchpad.ipynb  underactuated_utils.py
sysid/: BUILD.bazel
tools/: .gitignore  BUILD.bazel  check_html_links_exist.py  environ.bzl  footer.html.in  h_notify.py  header.html.in  hypothesis.py  install_html_meta_data.py
trajopt/: BUILD.bazel  dircol.ipynb  double_integrator.ipynb  mi_convex.ipynb  perching.ipynb  trajopt.ipynb
underactuated/: BUILD  BUILD.bazel  CMakeLists.txt  __init__.py  conf.py  double_integrator.py  glider.py  index.md  jupyter.py  mathematical_program_examples.ipynb  meshcat_cpp_utils.py  meshcat_utils.md  meshcat_utils.py  multibody.md  multibody.py  neural_value_iteration.md  neural_value_iteration.py  optimizers.py  package.xml  pendulum.py  plot_utils.md  plot_utils.py  pyplot_utils.md  pyplot_utils.py  pyplot_visualizer.py  quadrotor2d.py  scenarios.py  uav_environment.py  utils.py
(+746 files in other folders)
