# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

exports_files(
    ["LICENSE.TXT"],
    visibility = ["//visibility:public"],
)

# Some methods look for this file to find the root directory.
filegroup(
    name = "workspace",
    srcs = ["WORKSPACE.bazel"],
    visibility = ["//visibility:public"],
)
