# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2024 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

workspace(name = "underactuated")

load(
    "//book/htmlbook/tools:repositories.bzl",
    "rt_dependencies",
    "rt_toolchains",
)

rt_dependencies()

rt_toolchains()

load("@bazel_skylib//lib:versions.bzl", "versions")

versions.check("2.0.0")

load("@rules_python//python:pip.bzl", "pip_install")

pip_install(
    name = "pip",
    requirements = "//:requirements-bazel.txt",
)

load("//book/htmlbook/tools/buildifier:repositories.bzl", "buildifier_dependencies")

buildifier_dependencies()

load("//book/htmlbook/tools/tidy:repositories.bzl", "tidy_dependencies")

tidy_dependencies()

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "drake_models",
    urls = [
        "https://github.com/RobotLocomotion/models/archive/fe5326c5ffc36fda12c58883d22d29dc86009d65.tar.gz",
        "https://drake-mirror.csail.mit.edu/github/RobotLocomotion/models/fe5326c5ffc36fda12c58883d22d29dc86009d65.tar.gz",
        "https://s3.amazonaws.com/drake-mirror/github/RobotLocomotion/models/fe5326c5ffc36fda12c58883d22d29dc86009d65.tar.gz",
    ],
    sha256 = "2a232f7da8d575fe1fcc6ad396f634d1adc1c9ee856168f011fbeb42a01c76b1",
    strip_prefix = "models-fe5326c5ffc36fda12c58883d22d29dc86009d65",
    build_file_content = """
package(default_visibility = ["//visibility:public"])

_SRCS = glob(["**/*"])

exports_files(_SRCS)

filegroup(
    name = "drake_models",
    srcs = _SRCS,
)

""",
)
