[tool.poetry]
name = "underactuated"
# Use e.g. 2023.10.4.rc0 if I need to release a release candidate.
# Use e.g. 2023.10.4.post1 if I need to rerelease on the same day.
version = "2023.10.5"
description = "MIT 6.821 - Underactuated Robotics"
authors = ["Russ Tedrake <russt@mit.edu>"]
license = "BSD License"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
include = [
    "LICENSE.txt",
    "README.md",
    "pyproject.toml",
    "underactuated/**/*.jpg",
    "underactuated/**/*.md",
    "underactuated/**/*.mtl",
    "underactuated/**/*.npy",
    "underactuated/**/*.obj",
    "underactuated/**/*.py",
    "underactuated/**/*.sdf",
    "underactuated/**/*.txt",
    "underactuated/**/*.urdf",
    "underactuated/**/*.xml",
    "underactuated/**/*.yaml"
]

exclude = [
    "*.egg-info/**",
    "**/__pycache__/**",
    "**/*.bazel",
    "**/test/**",
    "bazel-*",
    "htmlbook/**",
    "data/**",
    "solutions/**",
    "figures/**"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "drake-nightly"
url = "https://drake-packages.csail.mit.edu/whl/nightly/"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.8"
drake = { version = "==0.0.20231004", source = "drake-nightly" }
gradescope-utils = ">=0.4.0"
mpld3 = ">=0.5.1"
pydot = ">=1.3.0"
timeout-decorator = ">=0.4.1"

[tool.poetry.dev-dependencies]
# Add any development-specific dependencies here.

[tool.black]
line-length = 79
include = '\.ipynb?$|\.pyi?$'
exclude = '''
/(
    \.git
  | \.history
  | bazel-*
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
[tool.autoflake]
in-place = true
recursive = true
expand-star-imports = true
ignore-init-module-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
