[tool.poetry]
name = "underactuated"
# Use e.g. 2023.10.4.rc0 if I need to release a release candidate.
# Use e.g. 2023.10.4.post1 if I need to rerelease on the same day.
version = "2024.04.07"
description = "MIT 6.821 - Underactuated Robotics"
authors = ["Russ Tedrake <russt@mit.edu>"]
license = "BSD License"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
include = [
    "LICENSE.txt",
    "README.md",
    "pyproject.toml",
    "underactuated/**/*.jpg",
    "underactuated/**/*.md",
    "underactuated/**/*.mtl",
    "underactuated/**/*.npy",
    "underactuated/**/*.obj",
    "underactuated/**/*.py",
    "underactuated/**/*.sdf",
    "underactuated/**/*.txt",
    "underactuated/**/*.urdf",
    "underactuated/**/*.xml",
    "underactuated/**/*.yaml"
]

exclude = [
    "*.egg-info/**",
    "**/__pycache__/**",
    "**/*.bazel",
    "**/test/**",
    "bazel-*",
    "book/**",
    "solutions/**",
    "figures/**"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "drake-nightly"
url = "https://drake-packages.csail.mit.edu/whl/nightly/"
priority = "explicit"

[tool.poetry.dependencies]
python = "<4.0,>=3.10"
drake = { version = "==0.0.20240307", source = "drake-nightly" }
#drake = ">=1.23.0"
gradescope-utils = ">=0.4.0"
ipywidgets = ">7"
mpld3 = ">=0.5.1"
pandas = ">=2.0"
pydot = ">=1.3.0"
scipy = ">=1.10.0"  # From github dependabot
timeout-decorator = ">=0.4.1"

[tool.poetry.group.docs]
optional = true

# Must include all dependencies required to build the docs with sphinx + autodoc.
[tool.poetry.group.docs.dependencies]
# Should match drake version above.
drake = { version = "==0.0.20240307", source = "drake-nightly" }
#drake = ">=1.23.0"
ipython = ">=7.8.0"
sphinx = ">=7.2.6"
myst-parser = ">=2.0.0"
sphinx_rtd_theme = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = ">=4.6.3"
black = { version = ">=23.*", extras = ["jupyter"] }
lxml = ">=4.9.2" # seems to be needed on python 3.11
# Blocked on poetry known issue; see Developers.md
#matplotlib = [ 
#  {platform="darwin", version=">=3.7.0"}, # old versions don't build in XCode
#  {platform="linux", version="3.5.1"}, # https://github.com/RobotLocomotion/drake/issues/14250 
#]
mysql-connector-python = ">=8.0.23"
nbconvert = [ 
  {platform="darwin", version="7.0.0"},
  {platform="linux", version="6.4.0"},
]
poetry-plugin-export = ">=1.6.0"
pre-commit = "^3.4.0"
# poetry-pre-commit-plugin = "^0.1.2" # causes cycle for bazel.
requests = ">=2.25.1"

[tool.black]
include = '\.ipynb?$|\.pyi?$'
exclude = '''
/(
    \.git
  | \.history
  | bazel-*
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
skip_glob = [
  "**/.git/**",
  "**/.history/**",
  "bazel-*",
  "**/.venv/**",
  "**/build/**",
  "**/dist/**",
]

[tool.autoflake]
in-place = true
recursive = true
expand-star-imports = true
ignore-init-module-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
