[tool.poetry]
name = "underactuated"
# Use e.g. 2023.10.4.rc0 if I need to release a release candidate.
# Use e.g. 2023.10.4.post1 if I need to rerelease on the same day.
version = "2025.3.31"
description = "MIT 6.821 - Underactuated Robotics"
authors = ["Russ Tedrake <russt@mit.edu>"]
license = "BSD License"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
include = [
    "LICENSE.txt",
    "README.md",
    "pyproject.toml",
    "underactuated/**/*.jpg",
    "underactuated/**/*.md",
    "underactuated/**/*.mtl",
    "underactuated/**/*.npy",
    "underactuated/**/*.obj",
    "underactuated/**/*.py",
    "underactuated/**/*.sdf",
    "underactuated/**/*.txt",
    "underactuated/**/*.urdf",
    "underactuated/**/*.xml",
    "underactuated/**/*.yaml"
]

exclude = [
    "*.egg-info/**",
    "**/__pycache__/**",
    "**/*.bazel",
    "**/test/**",
    "bazel-*",
    "book/**",
    "solutions/**",
    "figures/**"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "drake-nightly"
url = "https://drake-packages.csail.mit.edu/whl/nightly/"
priority = "explicit"

[tool.poetry.dependencies]
python = "<4.0,>=3.10"
drake = { version = ">=0.0.20250328 <1.0", source = "drake-nightly" }
#drake = ">=1.39.0"
gradescope-utils = { version=">=0.4.0", optional=true }
ipython = ">=7.8.0"
ipywidgets = { version=">=8" } # TODO: purge this 
lxml = {version = ">=4.9.2", extras = ["html_clean"], optional=true }
# Note: matplotlib gets additional handling in PoetryExport.sh for bazel. 
matplotlib = {version = ">=3.7.0", extras = ["mplot3d"]}
mpld3 = ">=0.5.1"
nbconvert = { version = ">=7.0.0", optional = true }
numpy = ">2.0.0"
pandas = { version=">=2.0", optional=true }
pydot = ">=1.3.0"
scipy = { version=">=1.10.0", optional=true }
timeout-decorator = { version=">=0.4.1", optional=true }

[tool.poetry.extras]
grader = ["gradescope-utils", "nbconvert", "nbformat", "timeout-decorator", ]
# 'all' should have all of the optional dependencies required to run any notebook in this repo.
all = [
  "gradescope-utils",
  "lxml",
  "nbconvert",
  "nbformat",
  "pandas",
  "scipy", 
  "timeout-decorator"
]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
# Must include all dependencies required to build the docs with sphinx +
# autodoc, even if it repeats some dependencies from main, because my sphinx
# script uses `poetry install --only docs`. This include any requirements
# needed to import for a file that sphinx autodoc is trying to index.
# Should match drake version above.
drake = { version = ">=0.0.20250328 <1.0", source = "drake-nightly" }
#drake = ">=1.39.0"
ipython = ">=7.8.0"
sphinx = ">=7.2.6"
myst-parser = ">=2.0.0"
sphinx_rtd_theme = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
# These should not appear as requirements in any BUILD.bazel (except htmlbook)
beautifulsoup4 = ">=4.6.3"
black = { version = ">=23.*", extras = ["jupyter"] }
mysql-connector-python = ">=8.0.23"
packaging = ">=24.2"
pip-requirements-parser = ">=32.0"
poetry = ">=2.0,<2.1.0"  # https://github.com/python-poetry/poetry/issues/10184
poetry-plugin-export = ">=1.6.0"
pre-commit = ">=3.4.0"
poetry-pre-commit-plugin = ">=0.1.2"
requests = ">=2.25.1"

[tool.black]
include = '\.ipynb?$|\.pyi?$'
exclude = '''
/(
    \.git
  | \.history
  | bazel-*
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
skip_glob = [
  "**/.git/**",
  "**/.history/**",
  "bazel-*",
  "**/.venv/**",
  "**/build/**",
  "**/dist/**",
]

[tool.autoflake]
in-place = true
recursive = true
expand-star-imports = true
ignore-init-module-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
