# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_binary", "rt_ipynb_test")

rt_ipynb_test(
    name = "contact",
    srcs = ["contact.ipynb"],
    deps = ["//underactuated"],
)

rt_ipynb_test(
    name = "limit_cycles",
    srcs = ["limit_cycles.ipynb"],
    deps = ["//underactuated"],
)

rt_ipynb_test(
    name = "optimization",
    srcs = ["optimization.ipynb"],
    deps = ["//underactuated"],
)

rt_ipynb_test(
    name = "perching",
    timeout = "moderate",
    srcs = ["perching.ipynb"],
    data = ["//underactuated/models/glider"],
    deps = ["//underactuated"],
)

rt_ipynb_test(
    name = "spring_loaded_inverted_pendulum",
    srcs = ["spring_loaded_inverted_pendulum.ipynb"],
    deps = ["//underactuated"],
)

rt_ipynb_test(
    name = "stochastic",
    srcs = ["stochastic.ipynb"],
    deps = ["//underactuated"],
)
