# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//htmlbook/tools/python:defs.bzl", "rt_py_test")

rt_py_test(
    name = "stereographic",
    srcs = ["stereographic.py"],
)

rt_py_test(
    name = "vanderpol_staircase",
    srcs = ["vanderpol_staircase.py"],
)
