# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2022 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")

rt_ipynb_test(
    name = "intro",
    srcs = ["intro.ipynb"],
    data = ["//underactuated/models:double_pendulum.urdf"],
    deps = ["//underactuated"],
)
