# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2022 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")

rt_ipynb_test(
    name = "continuous_vs_discrete_time",
    srcs = ["continuous_vs_discrete_time.ipynb"],
)

rt_ipynb_test(
    name = "value_iteration",
    srcs = ["value_iteration.ipynb"],
    deps = [
      "//underactuated",
    ],
)

rt_ipynb_test(
    name = "manifold",
    srcs = ["manifold.ipynb"],
    deps = [
      "//underactuated",
    ],
)

rt_ipynb_test(
    name = "ballbot",
    srcs = ["ballbot.ipynb"],
    deps = [
      "//underactuated",
    ],
)
