# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2022 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")

rt_ipynb_test(
    name = "common_lyap_linear",
    srcs = ["common_lyap_linear.ipynb"],
)

rt_ipynb_test(
    name = "cubic_poly",
    srcs = ["cubic_poly.ipynb"],
)

rt_ipynb_test(
    name = "global_pend",
    srcs = ["global_pend.ipynb"],
    deps = [
      "//underactuated",
    ],
)

rt_ipynb_test(
    name = "global_polynomial",
    srcs = ["global_polynomial.ipynb"],
    deps = [
      "//underactuated",
    ],
)

rt_ipynb_test(
    name = "outer_approx",
    srcs = ["outer_approx.ipynb"],
    deps = [
      "//underactuated",
    ],
)

rt_ipynb_test(
    name = "approximate_dp",
    timeout = "moderate",
    srcs = ["approximate_dp.ipynb"],
    data = ["//underactuated/models:cartpole.urdf"],
    deps = [
      "//underactuated",
    ],
)

rt_ipynb_test(
    name = "star_convex",
    srcs = ["star_convex.ipynb"],
    deps = [
      "//underactuated",
    ],
)

rt_ipynb_test(
    name = "trig_poly",
    srcs = ["trig_poly.ipynb"],
    data = ["//underactuated/models:cartpole.urdf"],
    deps = [
      "//underactuated",
    ],
)

rt_ipynb_test(
    name = "van_der_pol",
    srcs = ["van_der_pol.ipynb"],
    deps = [
      "//underactuated",
    ],
)

