# -*- mode: python -*-
# vi: set ft=python :

# Copyright 2020-2022 Massachusetts Institute of Technology.
# Licensed under the BSD 3-Clause License. See LICENSE.TXT for details.

load("//htmlbook/tools/jupyter:defs.bzl", "rt_ipynb_test")


rt_ipynb_test(
    name = "attractivity",
    srcs = ["attractivity.ipynb"],
    deps = [
      "//underactuated",
    ],
)

rt_ipynb_test(
    name = "autapse",
    srcs = ["autapse.ipynb"],
    deps = [
      "//underactuated",
      "//underactuated:meshcat_cpp_utils",
    ],
)

rt_ipynb_test(
    name = "energy_shaping",
    srcs = ["energy_shaping.ipynb"],
    deps = [
      "//underactuated",
    ],
)

rt_ipynb_test(
    name = "lstm",
    srcs = ["lstm.ipynb"],
    deps = [
      "//underactuated",
      "//underactuated:meshcat_cpp_utils",
    ],
)

rt_ipynb_test(
    name = "pend",
    srcs = ["pend.ipynb"],
    deps = [
      "//underactuated",
      "//underactuated:meshcat_cpp_utils",
    ],
)
